welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:40: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:46: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:56: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:66: error: not found: value dogHouse
		dogHouse();		
                ^